--- a/.gitignore
+++ b/.gitignore
@@ -51,11 +51,10 @@ Release/
 # Rewritten Software Ports 
 rewritten-software-ports/linux/LoaderMDO/LoaderMDO
 
-# Additional Tools stuff
-binaries/CMakeCXXCompilerId
-
 # CMake stuff
 build/
+CMakeFiles/
+binaries/CMakeCXXCompilerId
 
 # AdibouNet stuff
 adibounet/adibounet.log
