use /Od for CMake instead of /O2

--- a/tools/OBJDumper/CMakeLists.txt
+++ b/tools/OBJDumper/CMakeLists.txt
@@ -6,6 +6,6 @@ message("-- OBJDumper - CMake compilation")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
-set(CMAKE_CXX_FLAGS "-O2")
+set(CMAKE_CXX_FLAGS "-Od")
 
 add_executable(OBJDumper OBJDumper.cpp)
