--- a/tools/CTRKViewer/CMakeLists.txt
+++ b/tools/CTRKViewer/CMakeLists.txt
@@ -6,7 +6,7 @@ message("-- CTRKViewer - CMake compilation")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
-set(CMAKE_CXX_FLAGS "-O2")
+set(CMAKE_CXX_FLAGS "-Od")
 
 # Check if the system is Linux
 if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
