fix CMake c++ flags

--- a/tools/BCD1Creator/CMakeLists.txt
+++ b/tools/BCD1Creator/CMakeLists.txt
@@ -6,6 +6,6 @@ message("-- BCD1Creator - CMake compilation")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
-set(CMAKE_CXX_FLAGS "-Od")
+set(CMAKE_CXX_FLAGS "-Os")
 
 add_executable(BCD1Creator BCD1Creator.cpp)
