--- a/tools/ModelPathDumper/CMakeLists.txt
+++ b/tools/ModelPathDumper/CMakeLists.txt
@@ -6,6 +6,6 @@ message("-- ModelPathDumper - CMake compilation")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
-set(CMAKE_CXX_FLAGS "-Od")
+set(CMAKE_CXX_FLAGS "-Os")
 
 add_executable(ModelPathDumper ModelPathDumper.cpp)
