add missing tools to github workflows

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -41,3 +41,4 @@ jobs:
             binaries/OBJDumper/OBJDumper
             binaries/OBCViewer/OBCViewer
             binaries/CTRKViewer/CTRKViewer
+            binariers/PLAViewer/PLAViewer
