--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -40,3 +40,4 @@
             #binaries/OBJDumper/OBJDumper
             #binaries/OBCViewer/OBCViewer
             #binaries/CTRKViewer/CTRKViewer
+            #binaries/PLAViewer/PLAViewer
