--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Compile ModelPathDumper
         run: g++ -o ModelPathDumper.exe tools/ModelPathDumper/ModelPathDumper.cpp
 
-      - name: Compile Modern version of SYSTEM
+      - name: Compile SYSTEM (Modern Version)
         run: g++ -o SYSTEM.EXE rewritten-modern-software/SYSTEM/SYSTEM/SYSTEM.cpp
 
      # - name: Compile CTRKViewer
@@ -44,6 +44,9 @@ jobs:
 
      # - name: Compile OBCViewer
       #  run: g++ -o OBCViewer.exe tools/OBCViewer/OBCViewer.cpp
+
+    # - name: Compile PLAViewer
+      #  run: g++ -o PLAViewer.exe tools/PLAViewer/PLAViewer.cpp
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
@@ -57,4 +60,6 @@ jobs:
             OBJDumper.exe
             ModelPathDumper.exe
           #  OBCViewer.exe
+          #  CTRKViewer.exe
+          #  PLAViewer.exe
 
