add more python tools to windows CI

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -54,6 +54,27 @@ jobs:
       - name: Compile IMGConverter
         run: pyinstaller --onefile --distpath . tools/IMGConverter/IMGConverter.py
 
+      - name: Compile AdultCornerDecoder
+        run: pyinstaller --onefile --distpath . tools/AdultCornerDecoder/decoder.py
+
+      - name: Compile AdultCornerEncoder
+        run: pyinstaller --onefile --distpath . tools/AdultCornerEncoder/encoder.py
+
+      - name: Compile IMGIdentifier
+        run: pyinstaller --onefile --distpath . tools/IMGIdentifier/IMGIdentifier.py
+
+      - name: Compile OBCEditor
+        run: pyinstaller --onefile --distpath . tools/OBCEditor/OBCEditor.py
+
+      - name: Compile PetiteDetector
+        run: pyinstaller --onefile --distpath . tools/PetiteDetector/PetiteDetector.py
+
+      - name: Compile PKLiteDetector
+        run: pyinstaller --onefile --distpath . tools/PKLiteDetector/PKLiteDetector.py
+
+      - name: Compile SecuROMDetector
+        run: pyinstaller --onefile --distpath . tools/SecuROMDetector/SecuROMDetector.py
+
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -66,6 +87,13 @@ jobs:
             OBJDumper.exe
             ModelPathDumper.exe
             IMGConverter.exe
+            decoder.exe
+            encoder.exe
+            IMGIdentifier.exe
+            OBCEditor.exe
+            PetiteDetector.exe
+            PKLiteDetector.exe
+            SecuROMDetector.exe
           #  OBCViewer.exe
           #  CTRKViewer.exe
           #  PLAViewer.exe
