--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -18,38 +18,41 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install MinGW
-        run: choco install mingw -y
+      - name: Set up Visual Studio
+        uses: microsoft/setup-msbuild@v1
+        with:
+          vs-version: 'latest'
 
       - name: Install PyInstaller
         run: pip install pyinstaller
 
       - name: Compile LoaderMDO
-        run: g++ -o LoaderMDO.exe rewritten-modern-software/LoaderMDO/LoaderMDO/LoaderMDO.cpp
+        run: cl /EHsc /Fe:LoaderMDO.exe rewritten-modern-software/LoaderMDO/LoaderMDO/LoaderMDO.cpp
 
       - name: Compile BCD1Creator
-        run: g++ -o BCD1Creator.exe tools/BCD1Creator/BCD1Creator.cpp
+        run: cl /EHsc /Fe:BCD1Creator.exe tools/BCD1Creator/BCD1Creator.cpp
 
       - name: Compile DEV7Launcher
-        run: g++ -o DEV7Launcher.exe tools/DEV7Launcher/DEV7Launcher.cpp
+        run: cl /EHsc /Fe:DEV7Launcher.exe tools/DEV7Launcher/DEV7Launcher.cpp
 
       - name: Compile OBJDumper
-        run: g++ -o OBJDumper.exe tools/OBJDumper/OBJDumper.cpp
+        run: cl /EHsc /Fe:OBJDumper.exe tools/OBJDumper/OBJDumper.cpp
 
       - name: Compile ModelPathDumper
-        run: g++ -o ModelPathDumper.exe tools/ModelPathDumper/ModelPathDumper.cpp
+        run: cl /EHsc /Fe:ModelPathDumper.exe tools/ModelPathDumper/ModelPathDumper.cpp
 
       - name: Compile SYSTEM (Modern Version)
-        run: g++ -o SYSTEM.EXE rewritten-modern-software/SYSTEM/SYSTEM/SYSTEM.cpp
+        run: cl /EHsc /Fe:SYSTEM.EXE rewritten-modern-software/SYSTEM/SYSTEM/SYSTEM.cpp
 
-     # - name: Compile CTRKViewer
-      #  run: g++ -o CTRKViewer.exe tools/CTRKViewer/CTRKViewer.cpp
+      # Uncomment if you want to compile these
+      # - name: Compile CTRKViewer
+      #   run: cl /EHsc /Fe:CTRKViewer.exe tools/CTRKViewer/CTRKViewer.cpp
 
-     # - name: Compile OBCViewer
-      #  run: g++ -o OBCViewer.exe tools/OBCViewer/OBCViewer.cpp
+      # - name: Compile OBCViewer
+      #   run: cl /EHsc /Fe:OBCViewer.exe tools/OBCViewer/OBCViewer.cpp
 
-    # - name: Compile PLAViewer
-      #  run: g++ -o PLAViewer.exe tools/PLAViewer/PLAViewer.cpp
+      # - name: Compile PLAViewer
+      #   run: cl /EHsc /Fe:PLAViewer.exe tools/PLAViewer/PLAViewer.cpp
 
       - name: Compile IMGConverter
         run: pyinstaller --onefile --distpath . tools/IMGConverter/IMGConverter.py
@@ -97,4 +100,3 @@ jobs:
           #  OBCViewer.exe
           #  CTRKViewer.exe
           #  PLAViewer.exe
-            
