--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -21,7 +21,11 @@ jobs:
       - name: Set up Visual Studio
         uses: microsoft/setup-msbuild@v1
         with:
-          vs-version: 'latest'
+          vs-version: '2022'  # Specify Visual Studio 2022
+
+      - name: Initialize MSVC environment
+        run: |
+          call "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
 
       - name: Install PyInstaller
         run: pip install pyinstaller
