try again with new libs on Linux CI

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install required libs
         run: |
           sudo apt-get update
-          sudo apt-get install -y g++ make build-essential cmake
+          sudo apt-get install -y g++ make build-essential cmake libarchive-dev python3 genisoimage
 
       - name: Run configure
         run: ./configure
