--- a/.github/workflows/linux-tools.yml
+++ b/.github/workflows/linux-tools.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: compiled-linux-tools
+          name: common-linux
           path: |
             create_iso
             extract_iso
