add Y2K38Patcher to Windows CI

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -60,6 +60,9 @@ jobs:
       - name: Compile SetupPatcher
         run: g++ -static -o SetupPatcher.exe patches/SetupPatcher/SetupPatcher/SetupPatcher.cpp
 
+      - name: Compile Y2K38Patcher
+        run: g++ -static -o SetupPatcher.exe patches/Y2K38Patcher/Y2K38Patcher/Y2K38Patcher.cpp
+
       - name: Compile IMGConverter
         run: pyinstaller --onefile --distpath . tools/IMGConverter/IMGConverter.py
 
@@ -108,4 +111,5 @@ jobs:
             CTRKViewer.exe
             PLAViewer.exe
             SetupPatcher.exe
+            Y2K38Patcher.exe
           #  DEV7Monitor.exe
