--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -87,6 +87,9 @@ jobs:
       - name: Compile SecuROMDetector
         run: pyinstaller --onefile --distpath . tools/SecuROMDetector/SecuROMDetector.py
 
+      - name: Compile copyDatas
+        run: pyinstaller --onefile --distpath . tools/copyDatas/copyDatas.py
+
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -112,4 +115,5 @@ jobs:
             PLAViewer.exe
             SetupPatcher.exe
             Y2K38Patcher.exe
+            copyDatas.exe
           #  DEV7Monitor.exe
