migrate LOADER7VC from C# to C++

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -63,6 +63,9 @@ jobs:
       - name: Compile Y2K38Patcher
         run: g++ -static -o Y2K38Patcher.exe patches/Y2K38Patcher/Y2K38Patcher/Y2K38Patcher.cpp
 
+      - name: Compile LOADER7VC
+        run: g++ -static -o LOADER7VC.exe tools/LOADER7VC/LOADER7VC.cpp -lversion -lshlwapi
+
       - name: Compile IMGConverter
         run: pyinstaller --onefile --distpath . tools/IMGConverter/IMGConverter.py
 
@@ -116,4 +119,5 @@ jobs:
             SetupPatcher.exe
             Y2K38Patcher.exe
             copyDatas.exe
+            LOADER7VC.exe
           #  DEV7Monitor.exe
