--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -21,7 +21,10 @@ jobs:
       - name: Install required libs
         run: |
           sudo apt-get update
-          sudo apt-get install -y g++ make build-essential cmake libarchive-dev python3 genisoimage
+          sudo apt-get install -y g++ make build-essential cmake libarchive-dev python3 genisoimage python3-pip python3-pyinstaller
+
+      - name: Install PyInstaller
+        run: pip install pyinstaller
 
       - name: Run configure
         run: ./configure
