add install/uninstall option to CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,60 @@ endif()
 # Optional: Add a custom target to build all tools at once
 add_custom_target(all_tools
     DEPENDS BCD1Creator CTRKViewer DEV7Launcher OBCViewer OBJDumper ModelPathDumper LoaderMDO)
+
+# Install commands
+option(ENABLE_INSTALL "Enable installation of the project" ON)
+
+if(ENABLE_INSTALL)
+    install(TARGETS BCD1Creator CTRKViewer DEV7Launcher OBCViewer OBJDumper ModelPathDumper LoaderMDO
+        RUNTIME DESTINATION bin)
+
+    # Create symlinks for all tools
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/BCD1Creator
+        ${CMAKE_INSTALL_PREFIX}/bin/bcd1creator)")
+
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/CTRKViewer
+        ${CMAKE_INSTALL_PREFIX}/bin/ctrkviewer)")
+
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/DEV7Launcher
+        ${CMAKE_INSTALL_PREFIX}/bin/dev7launcher)")
+
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/OBCViewer
+        ${CMAKE_INSTALL_PREFIX}/bin/obcviewer)")
+
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/OBJDumper
+        ${CMAKE_INSTALL_PREFIX}/bin/objdumper)")
+
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/ModelPathDumper
+        ${CMAKE_INSTALL_PREFIX}/bin/modelpathdumper)")
+
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/LoaderMDO
+        ${CMAKE_INSTALL_PREFIX}/bin/loadermdo)")
+endif()
+
+# Uninstall command
+if(NOT TARGET uninstall)
+    add_custom_target(uninstall
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/BCD1Creator"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/bcd1creator"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/CTRKViewer"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/ctrkviewer"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/DEV7Launcher"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/dev7launcher"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/OBCViewer"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/obcviewer"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/OBJDumper"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/objdumper"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/ModelPathDumper"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/modelpathdumper"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/LoaderMDO"
+        COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/loadermdo"
+        COMMENT "Uninstalling the project")
+endif()
